src/core/main/default/objects/LoggerParameter__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>