src/core/main/default/objects/LoggerParameter__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <complianceGroup>None</complianceGroup>
    <label>Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>